--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ html {
 
 body {
   margin: 0;
-  background: whitesmoke;
   font-family: 'Squada One', cursive;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23666569' fill-opacity='0.12'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 h1 {
@@ -35,12 +36,16 @@ h1 {
 }
 
 .image-container {
-  margin: 10px 30%;
+  margin: 10px 5%;
+  columns: 3;
+  column-gap: 1rem;
 }
 
 .image-container img {
   width: 100%;
-  margin-top: 5px;
+  margin-top: 15px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 8px 1px #00000073;
 }
 
 @media screen and (max-width: 600px) {
@@ -49,5 +54,6 @@ h1 {
   }
   .image-container {
     margin: 10px 20px;
+    columns: 1;
   }
 }
