--- a/style.css
+++ b/style.css
@@ -57,3 +57,8 @@ h1 {
     columns: 1;
   }
 }
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  .image-container {
+    columns: 2;
+  }
+}
